Formatted files after added pre-commit and format task

--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "expo-react-native-seed",
+"name": "expo-react-native-seed",
   "license": "MIT",
   "main": "node_modules/expo/AppEntry.js",
-  "pre-commit": [
-    "lint",
-    "test"
-  ],
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll --coverage --verbose",
-    "lint": "eslint --ext .js --ext .jsx --fix ./app"
+    "test": "jest --watchAll=false --coverage --verbose",
+    "test:watch": "yarn test --watchAll=true",
+    "lint": "eslint --ext .js --ext .jsx --fix ./app",
+    "format": "yarn prettier --write \"app/**/*.{js,jsx}\""
   },
+  "pre-commit": [
+    "lint",
+    "test"
+  ],
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/bottom-tabs": "^5.2.5",
@@ -25,7 +27,6 @@
     "expo": "^37.0.0",
     "jwt-decode": "^2.2.0",
     "native-base": "2.13.8",
-    "pre-commit": "^1.2.2",
     "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
@@ -59,6 +60,7 @@
     "eslint-plugin-unicorn": "^8.0.1",
     "jest": "^25.2.7",
     "jest-expo": "^37.0.0",
+    "pre-commit": "^1.2.2",
     "react-devtools": "^3.6.3",
     "react-test-renderer": "^16.13.1",
     "reactotron-react-native": "^3.6.4",
