--- a/package.json
+++ b/package.json
@@ -69,9 +69,7 @@
     "jest-expo": "^37.0.0",
     "pre-commit": "^1.2.2",
     "react-devtools": "^3.6.3",
-    "react-test-renderer": "^16.13.1",
-    "reactotron-react-native": "^3.6.4",
-    "reactotron-redux": "^3.1.1"
+    "react-test-renderer": "^16.13.1"
   },
   "jest": {
     "preset": "jest-expo",
