--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll=false --coverage --verbose",
+    "test": "jest --forceExit --detectOpenHandles --watchAll=false --coverage --verbose",
     "test:watch": "yarn test --watchAll=true",
     "lint": "eslint --ext .js --ext .jsx --fix ./app",
     "format": "yarn prettier --write \"app/**/*.{js,jsx}\"",
